--- a/_uscisfiller.html
+++ b/_uscisfiller.html
@@ -122,6 +122,7 @@
 
     // Field coordinate mappings with page information.
     // Page numbers start at 0 (first page is page 0, second page is page 1, etc.)
+	// LINES WITH "GOOD" COMMENT HAVE COORDINATES FIXED. DO NOT CHANGE 
     const fieldCoords = {
       "i912_conv.pdf": {
         firstName:  { page: 0, x: 280,  y: 178 },//good
