--- a/uscisfiller_1.1.html
+++ b/uscisfiller_1.1.html
@@ -224,7 +224,7 @@
     </div>
     <div class="resizer" id="resizer"></div>
     <div id="formPane">
-      <h2>USCIS PDF Filler – Multi-Page Coordinates</h2>
+      <h2>USCIS PDF Filler</h2>
       <label>Select a Form:
         <select id="formSelect">
           <option value="i912_conv.pdf" selected>I-912</option>
