--- a/uscisfiller_1.1.html
+++ b/uscisfiller_1.1.html
@@ -391,19 +391,19 @@
         mailPostal: { page: 1, x: 350, y: 595 }
       },
       "n400_conv.pdf": {
-        firstName:  { page: 0, x: 280,  y: 136 },
-        middleName: { page: 0, x: 445, y: 136 },
-        lastName:   { page: 0, x: 63, y: 136 },
-        ssn:        { page: 1, x: 290,  y: 135 },
-        phone:      { page: 10, x: 67,  y: 378 },
-        email:      { page: 10, x: 67,  y: 341 },
-        mailAddress:{ page: 2, x: 67,  y: 317 },
-        mailCity:   { page: 2, x: 67,  y: 280 },
-        mailCountry:{ page: 2, x: 356,  y: 243 },
-        mailState:  { page: 2, x: 447, y: 280 },
-        mailProvince:{ page: 2, x: 67, y: 243 },
-        mailZip:    { page: 2, x: 520, y: 280 },
-        mailPostal: { page: 2, x: 225, y: 243 }
+        firstName:  { page: 0, x: 280,  y: 136 },//good
+        middleName: { page: 0, x: 445, y: 136 },//good
+        lastName:   { page: 0, x: 63, y: 136 },//good
+        ssn:        { page: 1, x: 290,  y: 135 },//good
+        phone:      { page: 10, x: 67,  y: 378 },//good
+        email:      { page: 10, x: 67,  y: 341 },//good
+        mailAddress:{ page: 2, x: 67,  y: 317 },//good
+        mailCity:   { page: 2, x: 67,  y: 280 },//good
+        mailCountry:{ page: 2, x: 356,  y: 243 },//good
+        mailState:  { page: 2, x: 447, y: 280 },//good
+        mailProvince:{ page: 2, x: 67, y: 243 },//good
+        mailZip:    { page: 2, x: 520, y: 280 },//good
+        mailPostal: { page: 2, x: 225, y: 243 }//good
       },
       "n600_conv.pdf": {
         firstName:  { page: 0, x: 80,  y: 720 },
