--- a/uscisfiller1.8.1.html
+++ b/uscisfiller1.8.1.html
@@ -785,7 +785,7 @@ body.dark-mode .travel-entry h4 {
 	    <!-- Previous Physical Address (AR-11 only) -->
     <fieldset id="previousPhysicalFieldset">
       <legend>Previous Physical Address</legend>
-      <label>Street: <input type="text" id="prevStreet" /></label>
+      <label>Street Number and Name: <input type="text" id="prevStreet" /></label>
       <label>City:   <input type="text" id="prevCity" /></label>
     
       </label>
