--- a/uscisfiller1.8.1.html
+++ b/uscisfiller1.8.1.html
@@ -807,7 +807,7 @@ body.dark-mode .travel-entry h4 {
     <!-- Different Mailing Address (shown only if No) -->
     <fieldset id="differentMailingAddress" style="display: none;">
       <legend>Different Mailing Address</legend>
-      <label>Street: <input type="text" id="newMailAddress" /></label>
+      <label>Street Number and Name: <input type="text" id="newMailAddress" /></label>
       <label>City: <input type="text" id="newMailCity" /></label>
       <label>Country:
         <select id="newMailCountry">
